Closed #29 Added devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,9 @@
 	// "features": {},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// This can be used to network with other containers or the host.
-	// "forwardPorts": [5000, 5432],
+	"forwardPorts": [
+		8000
+	],
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "pip install --user -r requirements.txt",
 	// Configure tool-specific properties.
@@ -27,7 +29,8 @@
 				"aaron-bond.better-comments",
 				"PKief.material-icon-theme",
 				"njpwerner.autodocstring",
-				"TabNine.tabnine-vscode"
+				"TabNine.tabnine-vscode",
+				"ms-azuretools.vscode-docker"
 			]
 		}
 	}
