--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -11,39 +11,21 @@ services:
 
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
-
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    network_mode: service:db
-
+    # network_mode: service:pzserver
     # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
-  db:
-    image: postgres:latest
-    restart: unless-stopped
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_DB: postgres
-      POSTGRES_PASSWORD: postgres
+    # pzserver:
+    #   # ATENÇÃO: Substitua a imagem pela versão desejada
+    #   image: linea/pzserver:backend_dev_latest
+    #   command: ./entrypoint.sh
+    #   environment:
+    #     DJANGO_SETTINGS_MODULE: pzserver.test_settings
+    #   volumes:
+    #     - pzserver-data:/archive/data
+    #   ports:
+    #     - 8000
 
-    # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
-    # (Adding the "ports" property to this file will not forward from a Codespace.)
-
-  pzserver:
-    # ATENÇÃO: Substitua a imagem pela versão desejada
-    image: linea/pzserver:backend_dev_latest
-    command: ./entrypoint.sh
-    environment:
-      DJANGO_SETTINGS_MODULE: pzserver.test_settings
-    volumes:
-      - pzserver-data/data:/archive/data
-      - pzserver-data/log:/log
-    depends_on:
-      - db
-    network_mode: service:db
-
-volumes:
-  postgres-data:
-  pzserver-data:
+    # volumes:
+    #   pzserver-data:
