--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,15 @@ dynamic = ["version"]
 dependencies = [
     "deprecated",
     "ipykernel", # Support for Jupyter notebooks
+    "numpy>=1.23, <1.24",
+    "pandas>=1.2.0",
+    "requests>=2.23.0",
+    "astropy>=5.0.0",
+    "matplotlib>=3.6.0",
+    "tables_io>=0.7.9",
+    "Jinja2>=3.1.2",
+    "ipython>=8.5.0",
+    "h5py>=3.8.0",
 ]
 
 # On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
