Added ghp-import package in build-documentation.yml

--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -33,3 +33,6 @@ jobs:
     - name: Build docs
       run: |
         sphinx-build -T -E -b html -d docs/build/doctrees ./docs docs/build/html
+    - name: Run ghp-import
+      run: | 
+        ghp-import -n -p -f -x docs docs/build/html
