Fixed intro_notebook links and this notebook was excluded from output cleanup

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,7 @@ repos:
         name: Clear output from Jupyter notebooks
         description: Clear output from Jupyter notebooks.
         files: \.ipynb$
+        exclude: ^docs/notebooks/intro_notebook.ipynb$
         stages: [commit]
         language: system
         entry: jupyter nbconvert --clear-output
