--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -11,10 +11,11 @@ on:
 
 jobs:
   build:
+    name: lint
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ['3.10', '3.11', '3.12']
 
     steps:
     - uses: actions/checkout@v3
