--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -17,7 +17,7 @@ permissions:
 
 jobs:
   pypi-publish:
-    name: Upload release to PyPI
+    name: pypi_publish
     runs-on: ubuntu-latest
     environment:
       name: pypi
@@ -38,6 +38,3 @@ jobs:
       run: python -m build
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@release/v1
-      # with:
-      #   user: __token__
-      #   password: ${{ secrets.PYPI_API_TOKEN }}
