--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
-sphinx==6.1.3
-sphinx_rtd_theme==1.2.0
-sphinx-autoapi==2.0.1
+sphinx>=7.0.0,<8
+sphinx_rtd_theme>1.2.0,<2
+sphinx-autoapi>=3.0.0,<4
 ghp-import
 nbsphinx
 ipython
