--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,28 @@
 [project]
 name = "pzserver"
 license = {file = "LICENSE"}
+dynamic = ["version"]
 readme = "README.md"
 authors = [
     { name = "LIneA", email = "itteam@linea.org.br" }
 ]
+requires-python = ">=3.8,<3.13"
 classifiers = [
     "Development Status :: 4 - Beta",
     "License :: OSI Approved :: MIT License",
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
     "Operating System :: OS Independent",
-    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
-dynamic = ["version"]
 dependencies = [
     "deprecated",
-    "ipykernel", # Support for Jupyter notebooks
-    "numpy>=1.23, <1.24",
+    "numpy>=1.23",
     "pandas>=1.2.0",
     "requests>=2.23.0",
     "astropy>=5.0.0",
@@ -26,7 +31,6 @@ dependencies = [
     "Jinja2>=3.1.2",
     "ipython>=8.5.0",
     "h5py>=3.8.0",
-    "jupyterlab",
 ]
 
 # On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
@@ -35,24 +39,25 @@ dev = [
     "pytest",
     "pytest-cov", # Used to report total code coverage
     "pre-commit", # Used to run checks before finalizing a git commit
-    "sphinx==6.1.3", # Used to automatically generate documentation
-    "sphinx_rtd_theme==1.2.0", # Used to render documentation
-    "sphinx-autoapi==2.0.1", # Used to automatically generate api documentation
+    "sphinx>=7.0.0,<8", # Used to automatically generate documentation
+    "sphinx_rtd_theme>=1.2.0,<2", # Used to render documentation
+    "sphinx-autoapi>=3.0.0,<4", # Used to automatically generate api documentation
     "pylint", # Used for static linting of files
     # if you add dependencies here while experimenting in a notebook and you
     # want that notebook to render in your documentation, please add the
     # dependencies to ./docs/requirements.txt as well.
+    "ipykernel", # Support for Jupyter notebooks
     "nbconvert", # Needed for pre-commit check to clear output from Python notebooks
     "nbsphinx", # Used to integrate Python notebooks into Sphinx documentation
     "ipython", # Also used in building notebooks into Sphinx
+    "jupyterlab",
     "matplotlib", # Used in sample notebook intro_notebook.ipynb
-    "numpy", # Used in sample notebook intro_notebook.ipynb
 ]
 
 [build-system]
 requires = [
-    "setuptools>=45", # Used to build and package the Python project
-    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
+    "setuptools>=66", # Used to build and package the Python project
+    "setuptools_scm>=8", # Gets release version from git. Makes it available programmatically
 ]
 build-backend = "setuptools.build_meta"
 
