--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 authors = [
     { name = "LIneA", email = "itteam@linea.org.br" }
 ]
-requires-python = ">=3.8,<3.13"
+requires-python = ">=3.7,<3.13"
 classifiers = [
     "Development Status :: 4 - Beta",
     "License :: OSI Approved :: MIT License",
@@ -31,6 +31,7 @@ dependencies = [
     "Jinja2>=3.1.2",
     "ipython>=8.5.0",
     "h5py>=3.8.0",
+    "pyarrow>=15.0.2",
 ]
 
 # On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
