Bug fix in validation of documentation construction. Refactoring the way of declaring requirements. Devcontainer fix.

--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -24,13 +24,13 @@ jobs:
         pip install .
         pip install .[dev]
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        if [ -f docs/requirements.txt ]; then pip install -r docs/requirements.txt; fi
+        if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
     - name: Install notebook requirements
       run: |
         sudo apt-get install pandoc
     - name: Build docs
       run: |
-        sphinx-build -T -E -b html -d docs/build/doctrees ./docs docs/build/html
+        sphinx-build -T -E -b html -d docs/build/doctrees ./docs docs/build/html -D exclude_patterns="notebooks/*"
     - name: Run ghp-import
       run: | 
         ghp-import -n -p -f -x docs/ docs/build/html
