--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -30,6 +30,7 @@ jobs:
         pip install .
         pip install .[dev]
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
     - name: Analyze code with linter
 
       run: |
