--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-deprecated
-numpy>=1.23
-pandas>=1.2.0
-requests>=2.23.0
-astropy>=5.0.0
-matplotlib>=3.6.0
-tables_io>=0.9.6
-Jinja2>=3.1.2
-ipython>=8.5.0
-h5py>=3.8.0
-pyarrow>=15.0.2
-pydantic>=2.7.1
+astropy==6.1.3
+Deprecated==1.2.14
+h5py==3.11.0
+ipython==8.27.0
+Jinja2==3.1.4
+matplotlib==3.9.2
+numpy==1.26.4
+pandas==2.2.2
+pyarrow==17.0.0
+pydantic==2.9.2
+requests==2.32.3
+tables-io==0.9.9
