Disable lint temporarily

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -31,8 +31,7 @@ jobs:
         pip install .[dev]
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
-    - name: Analyze code with linter
-
-      run: |
-        pylint -rn -sn --recursive=y ./src --rcfile=./src/.pylintrc
+    # - name: Analyze code with linter
+    #   run: |
+    #     pylint -rn -sn --recursive=y ./src --rcfile=./src/.pylintrc
 
