--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -123,5 +123,5 @@ repos:
             "-d", # Flag for cached environment and doctrees
             "./docs/build/doctrees", # Directory
             "-D", # Flag to override settings in conf.py
-            "exclude_patterns=notebooks/*/*.ipynb", # Exclude our notebooks from pre-commit
+            "exclude_patterns=notebooks/**.ipynb", # Exclude our notebooks from pre-commit
           ]
