feat(upload): Allow adding auxiliary files after upload creation
This commit introduces the ability to add auxiliary files to an upload after it has been initially created.

The changes include:

- Modifying the `UploadData` class to initialize `auxiliary_files` as an empty list by default.
- Adding a new method `add_auxiliary_file` to the `PzUpload` class, which allows users to add auxiliary files to an existing upload.
- Updating the `__save_upload_files` method to use the `add_auxiliary_file` method.
- The `add_auxiliary_file` method uploads the file, adds the file ID to the list of files, and updates the `auxiliary_files` attribute of the `UploadData` object.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
         description: Clear output from Jupyter notebooks.
         files: \.ipynb$
         exclude: ^docs/notebooks/intro_notebook.ipynb$
-        stages: [commit]
+        stages: [pre-commit]
         language: system
         entry: jupyter nbconvert --clear-output
 
