--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -9,6 +9,9 @@ services:
     volumes:
       - ../..:/workspaces:cached
 
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
