--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-astropy==6.1.3
-Deprecated==1.2.14
-h5py==3.11.0
-ipython==8.27.0
-Jinja2==3.1.4
-matplotlib==3.9.2
-numpy==1.26.4
-pandas==2.2.2
-pyarrow==17.0.0
-pydantic==2.9.2
-requests==2.32.3
-tables-io==0.9.9
+astropy>=6,<8
+Deprecated>=1,<2
+h5py>=3,<4
+ipython>=8,<9
+Jinja2>=3,<4
+matplotlib>=3,<4
+numpy>=1,<3
+pandas>=2,<3
+pyarrow>=17,<18
+pydantic>=2,<3
+requests>=2,<3
+tables-io>=1,<2
