--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Jinja2>=3,<4
 matplotlib>=3,<4
 numpy>=1,<3
 pandas>=2,<3
-pyarrow>=17,<18
+pyarrow>=17
 pydantic>=2,<3
 requests>=2,<3
 tables-io>=1,<2
